-channel name in prop -update pom -create role enum -put channel logic to service -refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.username=headlyboi
 spring.datasource.password=headlyboi
 spring.datasource.url=jdbc:postgresql://localhost:5432/headlyboi
 
-
 discord.bot.token=
-tracker.gg.token=
+discord.channel.name=stats-finder
 
+tracker.gg.token=
 url.tracker.gg.player.data=https://public-api.tracker.gg/v2/apex/standard/profile/%s/%s
