--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <version>5.4.32.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.0</version>
+        </dependency>
     </dependencies>
 
     <build>
