response from bot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ discord.channel.name=stats-finder
 
 tracker.gg.token=
 url.tracker.gg.player.data=https://public-api.tracker.gg/v2/apex/standard/profile/%s/%s
+
+apex.tracker.link=https://apex.tracker.gg/apex/profile/%s/%s/overview
